Split into separate files

--- a/meson.build
+++ b/meson.build
@@ -11,15 +11,20 @@ project('drm_playground', 'c',
 add_project_arguments('-Wno-unused-parameter', language: 'c')
 add_project_arguments('-D_POSIX_C_SOURCE=200809L', language: 'c')
 
-executable('drm_playground',
+executable(
+	'drm_playground',
 	files([
-		'drm.c',
+		'drm_connector.c',
+		'drm_crtc.c',
+		'drm_device.c',
+		'drm_plane.c',
+		'drm_prop.c',
+		'fb_dumb.c',
 		'main.c',
 		'util.c',
 	]),
 	dependencies: [
 		dependency('libdrm'),
-		meson.get_compiler('c').find_library('m'),
 	],
 	install: true,
 )
