writeback: create a PNG file

--- a/meson.build
+++ b/meson.build
@@ -50,5 +50,5 @@ executable(
 executable(
 	'writeback',
 	files('writeback.c'),
-	dependencies: [dp],
+	dependencies: [dp, dependency('libpng')],
 )
